--- a/index.html
+++ b/index.html
@@ -105,52 +105,52 @@ story-img: /images/team-sm.jpg
 <section   class="grid-center mob-hide ">
   <div class="col-12_sm-9 fadein multiple-items padded">
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size1.jpg">
+      <img src="images/gallery-size1.jpg" alt="building projects">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/maroon.jpg">
+      <img src="images/maroon.jpg" alt="hillside construction">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size2.jpg">
+      <img src="images/gallery-size2.jpg" alt="detailing and space planning">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size3.jpg">
+      <img src="images/gallery-size3.jpg" alt="full-service complete construction and development firm">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size4.jpg">
+      <img src="images/gallery-size4.jpg" alt="Structural concrete">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size6.jpg">
+      <img src="images/gallery-size6.jpg" alt="Property investment">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size5.jpg">
+      <img src="images/gallery-size5.jpg" alt="Structural framing">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size16.jpg">
+      <img src="images/gallery-size16.jpg" alt="Dream home">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/green.jpg">
+      <img src="images/green.jpg" alt=" Construction Development firm">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size7.jpg">
+      <img src="images/gallery-size7.jpg" alt="Los Angeles Dream home">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size8.jpg">
+      <img src="images/gallery-size8.jpg" alt="Exterior finishes and Renderings">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size17.jpg">
+      <img src="images/gallery-size17.jpg" alt=" Building consultations">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size9.jpg">
+      <img src="images/gallery-size9.jpg" alt=" Building permits for LA homes">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size13.jpg">
+      <img src="images/gallery-size13.jpg" alt="building company for luxury homes">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size18.jpg">
+      <img src="images/gallery-size18.jpg" alt="California luxury homes">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size11.jpg">
+      <img src="images/gallery-size11.jpg" alt="beautiful modern homes construction firm">
     </div>
 
   </div>
@@ -160,52 +160,52 @@ story-img: /images/team-sm.jpg
 <section  class="grid-center padded-top desktop-hide">
   <div class="col-12_sm-9 one-time fadein padded">
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size1.jpg">
+      <img src="images/gallery-size1.jpg" alt="building projects">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/maroon.jpg">
+      <img src="images/maroon.jpg" alt="hillside constructions">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size2.jpg">
+      <img src="images/gallery-size2.jpg" alt="detailing and space planning">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size3.jpg">
+      <img src="images/gallery-size3.jpg" alt="full-service complete construction and development firm">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size4.jpg">
+      <img src="images/gallery-size4.jpg" alt="Structural concrete">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size6.jpg">
+      <img src="images/gallery-size6.jpg" alt="Property investment">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size5.jpg">
+      <img src="images/gallery-size5.jpg" alt="Structural framing">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size16.jpg">
+      <img src="images/gallery-size16.jpg" alt="Dream homes">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/green.jpg">
+      <img src="images/green.jpg" alt=" Construction and Development firm">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size7.jpg">
+      <img src="images/gallery-size7.jpg" alt="Los Angeles Dream home">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size8.jpg">
+      <img src="images/gallery-size8.jpg" alt="Exterior finishes Renderings">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size17.jpg">
+      <img src="images/gallery-size17.jpg" alt=" Building consultations">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size9.jpg">
+      <img src="images/gallery-size9.jpg" alt="Building permits for LA homes">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size13.jpg">
+      <img src="images/gallery-size13.jpg" alt="building company for luxury homes">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size18.jpg">
+      <img src="images/gallery-size18.jpg" alt="California luxury homes">
     </div>
     <div class="col-1_sm-2_xs-4">
-      <img src="images/gallery-size11.jpg">
+      <img src="images/gallery-size11.jpg" alt="beautiful modern homes construction firm">
     </div>
   </div>
 </section>
