--- a/investment-center.html
+++ b/investment-center.html
@@ -65,7 +65,7 @@ place-6: 3933 Barryknoll
             <label class="input-label"><br></label>
           </div>
           <input type="text" name="message" placeholder="Leave us a message (optional)" class="input-text margin-top">
-          <input type="hidden" name="_to" value="hello@candyandtheking.com">
+          <input type="hidden" name="_to" value="vistaenterpriseinc@yahoo.com">
           <input type="text" name="_gotcha" style="display: none;">
           <input type="submit" value="Send Message" class="button-solid">
         </form>
