--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,7 @@ link-2: /barryknoll-drive-3927
 photo-2: /barryknoll-california/barryknoll0.jpg
 title-2: Los Angeles
 place-2: 3927 Barryknoll Drive
-link-3: /losangeles
+link-3: /beckman-road-3060
 photo-3: /beckman-losangeles/beckman1.jpg
 title-3: Los Angeles
 place-3: 3060 Beckman Road
@@ -27,11 +27,11 @@ link-5: /ocean-view-drive
 photo-5: /ocean-view-malibu/oceanview1.jpg
 title-5: Malibu
 place-5: 26600 Ocean View Drive
-link-4: /barryknoll-drive-3941
+link-4: /barryknoll-california-3941
 photo-4: /barryknoll-california-3941/barryknoll1.jpg
 title-4: Los Angeles
 place-4: 3941 Barryknoll
-link-6: /barryknoll-drive-3933
+link-6: /barryknoll-california-3933
 photo-6: /barryknoll-california-3933/barryknoll.jpg
 title-6: Los Angeles
 place-6: 3933 Barryknoll
