--- a/contact/index.html
+++ b/contact/index.html
@@ -41,8 +41,8 @@ meta-twitter-description: Contact Vista Enterprise, Inc a complete design and fu
             <div class="floating-input">
               <select name="options" id="options" required="">
                 <option value="Interest">What are you interested in? </option>
-                <option value="Commercial"> Construction</option>
-                <option value="Domestic">Investing</option>
+                <option value="Construction"> Construction</option>
+                <option value="Investing">Investing</option>
                 <input type="text" name="message" placeholder="Leave a message (optional)" class="input-text margin-top">
                 <input type="hidden" name="_to" value="vistaenterpriseinc@yahoo.com">
                 <input type="text" name="_gotcha" style="display: none;">
