--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@ meta-twitter-description: Contact Vista Enterprise, Inc a complete design and fu
       <form class="enquiry capped-width" method="post" action="/success.html">
         <div class="grid-center padded">
           <div class="col-12 centered">
-            <h2 class="sm-bold"> Let's get in Touch </h2>
+            <h2 class="sm-bold editable"> Let's get in Touch </h2>
           </div>
           <div class="col-10_sm-12 light-bg padded-2">
             <h3>Basics</h3>
