--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ story-img: /images/team-sm.jpg
 
 <!-- banner -->
 <section class="banner grid-center" style="background-image:url({{page.banner}}">
-  <div class="col-10_sm-12-middle centered">
+  <div class="col-10_sm-12-middle centered editable">
     <h1 class="big-bold"> Full-service construction and development firm </h1>
     <h3 class="sub-heading"> in Los Angeles, CA</h3>
   </div>
@@ -21,65 +21,65 @@ story-img: /images/team-sm.jpg
 
 <!-- about vista -->
 <section id="about" class="padded centered ">
-  <h2 class="fadein"> About Vista </h2>
-  <p class="left padded-sides"> <span class="fadein">Vista Enterprise, Inc, based in Sunny Los Angeles, delivers high quality building projects, specializing in hillside construction, detailing and space planning.</span> <span class="fadein">Vista Enterprise, Inc is a complete design, full-service construction company and development firm for both residential and commercial builds in Los Angeles.</span> <span class="fadein">As a full-service complete construction and development firm, we cater for all building needs from the ground up.</span><span class="fadein"> Whether you are interested in building your dream home, property investment, renovations,</span> <span class="fadein">remodelling, structural concrete, custom exterior finishes or even structural framing⎯Vista Enterprise, Inc is able to assist you.</span></p>
+  <h2 class="fadein editable"> About Vista </h2>
+  <p class="left padded-sides editable"> <span class="fadein">Vista Enterprise, Inc, based in Sunny Los Angeles, delivers high quality building projects, specializing in hillside construction, detailing and space planning.</span> <span class="fadein">Vista Enterprise, Inc is a complete design, full-service construction company and development firm for both residential and commercial builds in Los Angeles.</span> <span class="fadein">As a full-service complete construction and development firm, we cater for all building needs from the ground up.</span><span class="fadein"> Whether you are interested in building your dream home, property investment, renovations,</span> <span class="fadein">remodelling, structural concrete, custom exterior finishes or even structural framing⎯Vista Enterprise, Inc is able to assist you.</span></p>
 
-  <p class="left padded-sides"><span class="fadein">Over the last 35 years, Vista Enterprise, Inc has served the greater Los Angeles area with a vital service that has contributed to what California is known for today⎯rich arcitecture, luxury lifestyle and a cities built on dream homes and high-end commercial offices. <br> <span class="fadein">With all the years of experience, we have become leaders and specialists in hillside construction, detailing and space planning.<span class="fadein"></p>
+  <p class="left padded-sides editable"><span class="fadein">Over the last 35 years, Vista Enterprise, Inc has served the greater Los Angeles area with a vital service that has contributed to what California is known for today⎯rich arcitecture, luxury lifestyle and a cities built on dream homes and high-end commercial offices. <br> <span class="fadein">With all the years of experience, we have become leaders and specialists in hillside construction, detailing and space planning.<span class="fadein"></p>
 
-  <p class="left fadein padded-sides"> At Vista Enterprise Inc, no job is too big or too small. </p>
+  <p class="left fadein padded-sides editable"> At Vista Enterprise Inc, no job is too big or too small. </p>
 </section>
 
 <!-- vista services -->
 <section id="services"class="padded centered">
-  <h2 class="fadein"> Our Services </h2>
+  <h2 class="fadein editable"> Our Services </h2>
   <div class="grid padded-1">
-    <div class="col-4_sm-12 padded-1">
+    <div class="col-4_sm-12 padded-1 ">
       <i class=" fadein fas fa-mountain"></i>
-      <h4 class="fadein"> Hillside Construction</h4>
-      <p class ="left"><span class="fadein">When it comes to hillside construction⎯and the complexities that are involved⎯you need the best for the job.</span><span class="fadein"> Vista Enterprise, Inc are leading experts in hillside construction with 35+ years experience, serving the earthquake prone greater Los Angeles area.</span><span class="fadein"> Hillside construction includes building retaining walls, earthquake retrofitting, hillside stabilization, house bolting, and construction of concrete reinforcements and grade beams.</span> </p>
+      <h4 class="fadein editable"> Hillside Construction</h4>
+      <p class ="left editable"><span class="fadein">When it comes to hillside construction⎯and the complexities that are involved⎯you need the best for the job.</span><span class="fadein"> Vista Enterprise, Inc are leading experts in hillside construction with 35+ years experience, serving the earthquake prone greater Los Angeles area.</span><span class="fadein"> Hillside construction includes building retaining walls, earthquake retrofitting, hillside stabilization, house bolting, and construction of concrete reinforcements and grade beams.</span> </p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fa-building fadein"></i>
-      <h4 class="fadein"> Structual Framing </h4>
-      <p class ="left"><span class="fadein">Every custom home or new build is unique and comes with its own architectural needs.</span><span class="fadein"> At Vista Enterprise, Inc, our many years of experience enables us to problem solve, efficiently and effectively. </span><span class="fadein">To ensure the success of this critical component of the construction process, our motto is resilience, reliability and durability⎯a construction company in Los Angeles, CA that</span><span class="fadein"> incorporates a step-by-step process ensuring that every detail will be taken care of with the highest degree of care.</span></p>
+      <h4 class="fadein editable"> Structual Framing </h4>
+      <p class ="left editable"><span class="fadein">Every custom home or new build is unique and comes with its own architectural needs.</span><span class="fadein"> At Vista Enterprise, Inc, our many years of experience enables us to problem solve, efficiently and effectively. </span><span class="fadein">To ensure the success of this critical component of the construction process, our motto is resilience, reliability and durability⎯a construction company in Los Angeles, CA that</span><span class="fadein"> incorporates a step-by-step process ensuring that every detail will be taken care of with the highest degree of care.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-home"></i>
-      <h4 class="fadein"> Commercial and residential development </h4>
-      <p class ="left"><span class="fadein">Whether you own a business in Los Angeles, CA or planning on building your dream home, Vista Enterprise, Inc understands the needs of every project, and communicates each step of the build.</span><span class="fadein"> If you're looking for a ground up build or a re-modelling project, we take into consideration what the space will be used for so it can be fully optimized.</span><span class="fadein"> We're a construcion company in Los Angeles that take into account timelines, feasibility and budget while never compromising on aesthetic beauty.</span></p>
+      <h4 class="fadein editable"> Commercial and residential development </h4>
+      <p class ="left editable"><span class="fadein">Whether you own a business in Los Angeles, CA or planning on building your dream home, Vista Enterprise, Inc understands the needs of every project, and communicates each step of the build.</span><span class="fadein"> If you're looking for a ground up build or a re-modelling project, we take into consideration what the space will be used for so it can be fully optimized.</span><span class="fadein"> We're a construcion company in Los Angeles that take into account timelines, feasibility and budget while never compromising on aesthetic beauty.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-file-alt"></i>
-      <h4 class="fadein padded-0"> Building consultations, architectural renderings, permits </h4>
-      <p class ="left"><span class="fadein">We are a full-service construction and development company. This means our thorough understanding, knowledge and experience makes your dream a reality.</span><span class="fadein"> Setting up a consultation with us is invaluable, as we're up-to-date with obtaining permits, city laws and details.</span><span class="fadein"> Our team also assists in making early decisions about your design, materials and overall construction plans. This makes construction completion as efficient and cost effective as possible.</span></p>
+      <h4 class="fadein padded-0 editable"> Building consultations, architectural renderings, permits </h4>
+      <p class ="left editable"><span class="fadein">We are a full-service construction and development company. This means our thorough understanding, knowledge and experience makes your dream a reality.</span><span class="fadein"> Setting up a consultation with us is invaluable, as we're up-to-date with obtaining permits, city laws and details.</span><span class="fadein"> Our team also assists in making early decisions about your design, materials and overall construction plans. This makes construction completion as efficient and cost effective as possible.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-hammer"></i>
-      <h4 class="fadein"> Renovations, exterior/interior finishes, space planning </h4>
-      <p class ="left"><span class="fadein">From optimizing space on a previous build, repairing existing walls to crafting custom exterior finishes, we provide services that give your build the "wow" factor.</span><span class="fadein"> On all renovations, renderings and exterior/interior finishes, our focus is constructions that last and face all weather-related circumstances. </span><span class="fadein">At Vista Enterprise, Inc we pride ourselves in detailed custom finishes to make your build unique, never compromising on safety, durability and functionality.</span></p>
+      <h4 class="fadein editable"> Renovations, exterior/interior finishes, space planning </h4>
+      <p class ="left editable"><span class="fadein">From optimizing space on a previous build, repairing existing walls to crafting custom exterior finishes, we provide services that give your build the "wow" factor.</span><span class="fadein"> On all renovations, renderings and exterior/interior finishes, our focus is constructions that last and face all weather-related circumstances. </span><span class="fadein">At Vista Enterprise, Inc we pride ourselves in detailed custom finishes to make your build unique, never compromising on safety, durability and functionality.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fa-truck fadein"></i>
-      <h4 class="fadein"> Structural concrete </h4>
-      <p class ="left"><span class="fadein">We are up-to-date on city permitting laws and details, making the completion of foundations efficient, safe and legal. </span><span class="fadein">Structural concrete is a vital component of a buildings integrity, therefore shortcuts should never be taken.</span><span class="fadein"> As an experienced construction company in Los Angeles, CA our expertize range from laying structural concrete on raw land to the replacement of leaning posts under your home, or bent girders under your commercial structure.</span></p>
+      <h4 class="fadein editable"> Structural concrete </h4>
+      <p class ="left editable"><span class="fadein">We are up-to-date on city permitting laws and details, making the completion of foundations efficient, safe and legal. </span><span class="fadein">Structural concrete is a vital component of a buildings integrity, therefore shortcuts should never be taken.</span><span class="fadein"> As an experienced construction company in Los Angeles, CA our expertize range from laying structural concrete on raw land to the replacement of leaning posts under your home, or bent girders under your commercial structure.</span></p>
     </div>
   </div>
 </section>
 
 <!-- vista story -->
 <section id="story" class="light-bg grid-center padded">
-    <h2 class="col-12 centered fadein"> Our Story </h2>
+    <h2 class="col-12 centered fadein editable"> Our Story </h2>
   <div class="grid padded flex-flip">
     <div class="col-5_sm-12 bg-image-mob-banner"style="background-image:url({{page.story-img}}">
     </div>
     <div class="col-7_sm-12-middle padded-mob-non">
-      <h4 class="subtle-heading fadein"> It started with fascination </h4>
-      <h3 class="fadein"> An architect at 12-years-old</h3>
-      <p> <span class="fadein">The CEO and founder of Vista Enterprise, Inc, Raymond Munro from the age of 12 was fascinated with the concepts of architectural design and construction.</span><span class="fadein"> Today, that passion is a reflection of his work. </span><span class="fadein"> Raymond Munro is considered to be an expert in Hillside Investment, development and construction.</span> </p>
+      <h4 class="subtle-heading fadein editable"> It started with fascination </h4>
+      <h3 class="fadein editable"> An architect at 12-years-old</h3>
+      <p class="editable"> <span class="fadein">The CEO and founder of Vista Enterprise, Inc, Raymond Munro from the age of 12 was fascinated with the concepts of architectural design and construction.</span><span class="fadein"> Today, that passion is a reflection of his work. </span><span class="fadein"> Raymond Munro is considered to be an expert in Hillside Investment, development and construction.</span> </p>
 
-      <p> <span class="fadein"> After graduating from architectural engineering School Raymond Munro started working for The Pacific Stock Exchange.</span><span class="fadein"> It was there that he acquired business administration and managerial experience, equipping him to obtain the know-how to invest in the stock market. </span><span class="fadein">All which facilitated his long term goal⎯establishing his own Hillside Investment, development and construction firm.</span></p>
+      <p class="editable"> <span class="fadein"> After graduating from architectural engineering School Raymond Munro started working for The Pacific Stock Exchange.</span><span class="fadein"> It was there that he acquired business administration and managerial experience, equipping him to obtain the know-how to invest in the stock market. </span><span class="fadein">All which facilitated his long term goal⎯establishing his own Hillside Investment, development and construction firm.</span></p>
 
-      <p><span class="fadein">Vista Enterprise, Inc was founded 35 years ago with the purpose of building beautiful homes by offering all services related to construction. </span><span class="fadein">Having a firm understanding of the process from start to finish not only speeds up the project time, but also makes sure every requirement for each stage is complete before moving forward.</span></p>
+      <p class="editable"><span class="fadein">Vista Enterprise, Inc was founded 35 years ago with the purpose of building beautiful homes by offering all services related to construction. </span><span class="fadein">Having a firm understanding of the process from start to finish not only speeds up the project time, but also makes sure every requirement for each stage is complete before moving forward.</span></p>
 
     </div>
   </div>
@@ -101,7 +101,7 @@ story-img: /images/team-sm.jpg
 </section> -->
 
 <!-- gallery -->
-<h2 id="gallery" class="col-12 centered padded-top fadein">Gallery</h2>
+<h2 id="gallery" class="col-12 centered padded-top fadein editable">Gallery</h2>
 <section   class="grid-center mob-hide ">
   <div class="col-12_sm-9 fadein multiple-items padded">
     <div class="col-1_sm-2_xs-4">
