--- a/investment-center/index.html
+++ b/investment-center/index.html
@@ -39,9 +39,9 @@ place-6: 3933 Barryknoll
 ---
 <section class="grid-center light-bg padded">
   <div class= "col-8_sm-10 centered">
-  <p class="left"> Vista Enterprise, Inc has over 35 years of experience in the investment world. Investing in property development can increase your legacy in a secure, fast and intelligent way. Depending on the project, investing with Vista Enterprise, Inc can yield a return ranging between 55% and 100%, with investments starting as low as $40, 000.00 in Los Angeles, CA.</p>
+  <p class="left editable"> Vista Enterprise, Inc has over 35 years of experience in the investment world. Investing in property development can increase your legacy in a secure, fast and intelligent way. Depending on the project, investing with Vista Enterprise, Inc can yield a return ranging between 55% and 100%, with investments starting as low as $40, 000.00 in Los Angeles, CA.</p>
 
-  <p class="left">Vista Enterprise, Inc is also pleased to offer you the amazing opportunity of overseas property investment on the amazing Island of Roatan in Honduras. The island of Roatan has been voted number 3, in the top 10 best islands of the world. Do you want your money to work for you? Vista Enterprise, Inc is accepting investors in Los Angeles, CA and Roatan, Honduras now. If you would like more information about how you can invest in your future, with the high returns that come with property development, do not hesitate to contact us. </p>
+  <p class="left editable">Vista Enterprise, Inc is also pleased to offer you the amazing opportunity of overseas property investment on the amazing Island of Roatan in Honduras. The island of Roatan has been voted number 3, in the top 10 best islands of the world. Do you want your money to work for you? Vista Enterprise, Inc is accepting investors in Los Angeles, CA and Roatan, Honduras now. If you would like more information about how you can invest in your future, with the high returns that come with property development, do not hesitate to contact us. </p>
 </section>
 <section class="grid-center">
   <section class="padded col-10">
@@ -74,5 +74,5 @@ place-6: 3933 Barryknoll
 </section>
 
 <section class="centered">
-  <h2>Explore our recent projects</h2>
+  <h2 class="editable">Explore our recent projects</h2>
 </section>
