--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@ banner: /images/banner2.jpg
 story-img: /images/team-sm.jpg
 ---
 <section class="grid-center padded">
-  <h1 class="success padded-top centered col-12"> Success!</h1>
-  <p class="sent col-6-center centered "> Your form was successfully sent. Someone from our team will be in contact with you shortly. Until then, continue exploring our <a href="/projects"> projects</a>.</p>
+  <h1 class="success padded-top centered col-12 editable"> Success!</h1>
+  <p class="sent col-6-center centered editable"> Your form was successfully sent. Someone from our team will be in contact with you shortly. Until then, continue exploring our <a class="editable" href="/projects"> projects</a>.</p>
 
 </section>
