--- a/404.html
+++ b/404.html
@@ -12,6 +12,6 @@ story-img: /images/team-sm.jpg
 ---
 <section class="grid-center padded">
   <h1 class="success padded-top centered col-12"> Oops!</h1>
-  <p class="sent col-6-center centered "> It seems as though you're trying to access a page that doesn't exist. No worries, you can simple go back <a href="/"> here</a>.</p>
+  <p class="sent col-6-center centered "> It seems as though you're trying to access a page that doesn't exist. No worries, you can simple go back <a href = "javascript:history.back()">here</a>.</p>
 
 </section>
