--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ banner: /images/banner2.jpg
 story-img: /images/team-sm.jpg
 ---
 <section class="grid-center padded">
-  <h1 class="success padded-top centered col-12"> Oops!</h1>
-  <p class="sent col-6-center centered "> It seems as though you're trying to access a page that doesn't exist. No worries, you can simple go back <a href = "javascript:history.back()">here</a>.</p>
+  <h1 class="success padded-top-sent centered col-12"> Oops!</h1>
+  <p class="sent col-6-center_sm-12 centered "> It seems as though you're trying to access a page that doesn't exist. No worries, you can simple go back <a href = "javascript:history.back()">here</a>.</p>
 
 </section>
