--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ story-img: /images/team-sm.jpg
 <!-- about vista -->
 <section id="about" class="padded centered ">
   <h2 class="fadein editable"> About Vista </h2>
-  <p class="left padded-sides editable"> <span class="fadein">Vista Enterprise, Inc, based in Sunny Los Angeles, delivers high quality building projects, specializing in hillside construction, detailing and space planning.</span> <span class="fadein">Vista Enterprise, Inc is a complete design, full-service construction company and development firm for both residential and commercial builds in Los Angeles.</span> <span class="fadein">As a full-service complete construction and development firm, we cater for all building needs from the ground up.</span><span class="fadein"> Whether you are interested in building your dream home, property investment, renovations,</span> <span class="fadein">remodelling, structural concrete, custom exterior finishes or even structural framing⎯Vista Enterprise, Inc is able to assist you.</span></p>
+  <p class="left padded-sides editable"> <span class="fadein">Vista Enterprise, Inc. based in Sunny Los Angeles, delivers high quality building projects, specializing in hillside construction, detailing and space planning.</span> <span class="fadein">Vista Enterprise, Inc. is a complete design, full-service construction company and development firm for both residential and commercial builds in Los Angeles.</span> <span class="fadein">As a full-service complete construction and development firm, we cater for all building needs from the ground up.</span><span class="fadein"> Whether you are interested in building your dream home, property investment, renovations,</span> <span class="fadein">remodelling, structural concrete, custom exterior finishes or even structural framing⎯Vista Enterprise, Inc. is able to assist you.</span></p>
 
-  <p class="left padded-sides editable"><span class="fadein">Over the last 35 years, Vista Enterprise, Inc has served the greater Los Angeles area with a vital service that has contributed to what California is known for today⎯rich arcitecture, luxury lifestyle and a cities built on dream homes and high-end commercial offices. <br> <span class="fadein">With all the years of experience, we have become leaders and specialists in hillside construction, detailing and space planning.<span class="fadein"></p>
+  <p class="left padded-sides editable"><span class="fadein">Over the last 35 years, Vista Enterprise, Inc. has served the greater Los Angeles area with a vital service that has contributed to what California is known for today⎯rich arcitecture, luxury lifestyle and a cities built on dream homes and high-end commercial offices. <br> <span class="fadein">With all the years of experience, we have become leaders and specialists in hillside construction, detailing and space planning.<span class="fadein"></p>
 
-  <p class="left fadein padded-sides editable"> At Vista Enterprise Inc, no job is too big or too small. </p>
+  <p class="left fadein padded-sides editable"> At Vista Enterprise, Inc., no job is too big or too small. </p>
 </section>
 
 <!-- vista services -->
@@ -36,17 +36,17 @@ story-img: /images/team-sm.jpg
     <div class="col-4_sm-12 padded-1 ">
       <i class=" fadein fas fa-mountain"></i>
       <h4 class="fadein editable"> Hillside Construction</h4>
-      <p class ="left editable"><span class="fadein">When it comes to hillside construction⎯and the complexities that are involved⎯you need the best for the job.</span><span class="fadein"> Vista Enterprise, Inc are leading experts in hillside construction with 35+ years experience, serving the earthquake prone greater Los Angeles area.</span><span class="fadein"> Hillside construction includes building retaining walls, earthquake retrofitting, hillside stabilization, house bolting, and construction of concrete reinforcements and grade beams.</span> </p>
+      <p class ="left editable"><span class="fadein">When it comes to hillside construction⎯and the complexities that are involved⎯you need the best for the job.</span><span class="fadein"> Vista Enterprise, Inc. are leading experts in hillside construction with 35+ years experience, serving the earthquake prone greater Los Angeles area.</span><span class="fadein"> Hillside construction includes building retaining walls, earthquake retrofitting, hillside stabilization, house bolting, and construction of concrete reinforcements and grade beams.</span> </p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fa-building fadein"></i>
       <h4 class="fadein editable"> Structual Framing </h4>
-      <p class ="left editable"><span class="fadein">Every custom home or new build is unique and comes with its own architectural needs.</span><span class="fadein"> At Vista Enterprise, Inc, our many years of experience enables us to problem solve, efficiently and effectively. </span><span class="fadein">To ensure the success of this critical component of the construction process, our motto is resilience, reliability and durability⎯a construction company in Los Angeles, CA that</span><span class="fadein"> incorporates a step-by-step process ensuring that every detail will be taken care of with the highest degree of care.</span></p>
+      <p class ="left editable"><span class="fadein">Every custom home or new build is unique and comes with its own architectural needs.</span><span class="fadein"> At Vista Enterprise, Inc., our many years of experience enables us to problem solve, efficiently and effectively. </span><span class="fadein">To ensure the success of this critical component of the construction process, our motto is resilience, reliability and durability⎯a construction company in Los Angeles, CA that</span><span class="fadein"> incorporates a step-by-step process ensuring that every detail will be taken care of with the highest degree of care.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-home"></i>
       <h4 class="fadein editable"> Commercial and residential development </h4>
-      <p class ="left editable"><span class="fadein">Whether you own a business in Los Angeles, CA or planning on building your dream home, Vista Enterprise, Inc understands the needs of every project, and communicates each step of the build.</span><span class="fadein"> If you're looking for a ground up build or a re-modelling project, we take into consideration what the space will be used for so it can be fully optimized.</span><span class="fadein"> We're a construcion company in Los Angeles that take into account timelines, feasibility and budget while never compromising on aesthetic beauty.</span></p>
+      <p class ="left editable"><span class="fadein">Whether you own a business in Los Angeles, CA or planning on building your dream home, Vista Enterprise, Inc. understands the needs of every project, and communicates each step of the build.</span><span class="fadein"> If you're looking for a ground up build or a re-modelling project, we take into consideration what the space will be used for so it can be fully optimized.</span><span class="fadein"> We're a construcion company in Los Angeles that take into account timelines, feasibility and budget while never compromising on aesthetic beauty.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-file-alt"></i>
@@ -56,7 +56,7 @@ story-img: /images/team-sm.jpg
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-hammer"></i>
       <h4 class="fadein editable"> Renovations, exterior/interior finishes, space planning </h4>
-      <p class ="left editable"><span class="fadein">From optimizing space on a previous build, repairing existing walls to crafting custom exterior finishes, we provide services that give your build the "wow" factor.</span><span class="fadein"> On all renovations, renderings and exterior/interior finishes, our focus is constructions that last and face all weather-related circumstances. </span><span class="fadein">At Vista Enterprise, Inc we pride ourselves in detailed custom finishes to make your build unique, never compromising on safety, durability and functionality.</span></p>
+      <p class ="left editable"><span class="fadein">From optimizing space on a previous build, repairing existing walls to crafting custom exterior finishes, we provide services that give your build the "wow" factor.</span><span class="fadein"> On all renovations, renderings and exterior/interior finishes, our focus is constructions that last and face all weather-related circumstances. </span><span class="fadein">At Vista Enterprise, Inc., we pride ourselves in detailed custom finishes to make your build unique, never compromising on safety, durability and functionality.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fa-truck fadein"></i>
@@ -75,11 +75,11 @@ story-img: /images/team-sm.jpg
     <div class="col-7_sm-12-middle padded-mob-non">
       <h4 class="subtle-heading fadein editable"> It started with fascination </h4>
       <h3 class="fadein editable"> An architect at 12-years-old</h3>
-      <p class="editable"> <span class="fadein">The CEO and founder of Vista Enterprise, Inc, Raymond Munro from the age of 12 was fascinated with the concepts of architectural design and construction.</span><span class="fadein"> Today, that passion is a reflection of his work. </span><span class="fadein"> Raymond Munro is considered to be an expert in Hillside Investment, development and construction.</span> </p>
+      <p class="editable"> <span class="fadein">From the age of 12, Raymond Munro, The CEO and founder of Vista Enterprise, Inc.,  was fascinated with the concepts of architectural design and construction.</span><span class="fadein"> Today, that passion is a reflection of his work. </span><span class="fadein"> Raymond Munro is considered to be an expert in Hillside Investment, development and construction.</span> </p>
 
       <p class="editable"> <span class="fadein"> After graduating from architectural engineering School Raymond Munro started working for The Pacific Stock Exchange.</span><span class="fadein"> It was there that he acquired business administration and managerial experience, equipping him to obtain the know-how to invest in the stock market. </span><span class="fadein">All which facilitated his long term goal⎯establishing his own Hillside Investment, development and construction firm.</span></p>
 
-      <p class="editable"><span class="fadein">Vista Enterprise, Inc was founded 35 years ago with the purpose of building beautiful homes by offering all services related to construction. </span><span class="fadein">Having a firm understanding of the process from start to finish not only speeds up the project time, but also makes sure every requirement for each stage is complete before moving forward.</span></p>
+      <p class="editable"><span class="fadein">Vista Enterprise, Inc. was founded 35 years ago with the purpose of building beautiful homes by offering all services related to construction. </span><span class="fadein">Having a firm understanding of the process from start to finish not only speeds up the project time, but also makes sure every requirement for each stage is complete before moving forward.</span></p>
 
     </div>
   </div>
