--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ featured-image_path: /images/banner2.jpg"
 meta-social-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 url:
 meta-twitter-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
-banner: /images/banner2.jpg
+banner: /images/banner2-sm.jpg
 story-img: /images/team-sm.jpg
 ---
 
