--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@ featured-image_path: /images/banner2.jpg"
 meta-social-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 url:
 meta-twitter-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
-banner: /images/banner2-sm.jpg
-story-img: /images/team-sm.jpg
+banner_image: /images/banner2-sm.jpg
+story_image: /images/team-sm.jpg
 ---
 
 <!-- banner -->
-<section class="banner grid-center" style="background-image:url({{page.banner}}">
+<section class="banner grid-center" style="background-image:url({{page.banner_image}}">
   <div class="col-10_sm-12-middle centered editable">
     <h1 class="big-bold"> Full-service construction and development firm </h1>
     <h3 class="sub-heading"> in Los Angeles, CA</h3>
@@ -70,7 +70,7 @@ story-img: /images/team-sm.jpg
 <section id="story" class="light-bg grid-center padded">
     <h2 class="col-12 centered fadein editable"> Our Story </h2>
   <div class="grid padded flex-flip">
-    <div class="col-5_sm-12 bg-image-mob-banner"style="background-image:url({{page.story-img}}">
+    <div class="col-5_sm-12 bg-image-mob-banner"style="background-image:url({{page.story_image}}">
     </div>
     <div class="col-7_sm-12-middle padded-mob-non">
       <h4 class="subtle-heading fadein editable"> It started with fascination </h4>
