--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ meta-site-description: >-
   full-service construction, development and investment firm for both
   residential and commercial builds
 twitter-title: Full-service construction and development firm
-featured-image_path: /images/banner2.jpg"
+featured-image_path: /images/banner2-sm.jpg"
 meta-social-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
-url:
+url: https://vistaenterpriseinc.us
 meta-twitter-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 banner_image: /images/banner2-sm.jpg
 story_image: /images/team-sm.jpg
