--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@ meta-site-description: Vista Enterprise, Inc based in Los Angeles, CA is a compl
 twitter-title: Construction company for beautiful homes commercial buildings
 featured-image_path: /barryknoll-california/barryknoll0.jpg
 meta-social-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
-url:
+url: https://vistaenterpriseinc.us/projects
 meta-twitter-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 heading: Recent Completed Projects
 button: View projects
