--- a/projects/index.html
+++ b/projects/index.html
@@ -10,9 +10,9 @@ meta-twitter-description: Vista Enterprise, Inc based in Los Angeles, CA is a co
 heading: Recent Completed Projects
 button: View projects
 button-link: /projects#projects
-banner: /images/barryknoll-road3941-2.jpg
+banner_image: /images/barryknoll-road3941-2.jpg
 link-1: /malibu
-photo-1: /vista-ridge-malibu/ridge1.jpg
+1_photo: /vista-ridge-malibu/ridge1.jpg
 title-1: Malibu
 place-1: 2210 Ridge Drive
 link-2: /barryknoll-drive-3927
