--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@ button: View projects
 button-link: /projects#projects
 banner_image: /images/barryknoll-road3941-2.jpg
 link-1: /malibu
-1_photo: /vista-ridge-malibu/ridge1.jpg
+photo-1_image: /vista-ridge-malibu/ridge1.jpg
 title-1: Malibu
 place-1: 2210 Ridge Drive
 link-2: /barryknoll-drive-3927
