--- a/investment-center/index.html
+++ b/investment-center/index.html
@@ -11,29 +11,29 @@ heading: Recent Completed Projects
 heading: Invest in property
 button: Invest Now
 button-link: /investment-center#invest
-banner: /images/invest.jpg
+banner_image: /images/invest.jpg
 link-1: /malibu
-photo-1: /vista-ridge-malibu/ridge1.jpg
+photo-1_image: /vista-ridge-malibu/ridge1.jpg
 title-1: Malibu
 place-1: 2210 Ridge Drive
 link-2: /barryknoll-drive-3927
-photo-2: /barryknoll-california/barryknoll0.jpg
+photo-2_image: /barryknoll-california/barryknoll0.jpg
 title-2: Los Angeles
 place-2: 3927 Barryknoll Drive
 link-3: /losangeles
-photo-3: /beckman-losangeles/beckman1.jpg
+photo-3_image: /beckman-losangeles/beckman1.jpg
 title-3: Los Angeles
 place-3: 3060 Beckman Road
 link-5: /ocean-view-drive
-photo-5: /ocean-view-malibu/oceanview1.jpg
+photo-5_image: /ocean-view-malibu/oceanview1.jpg
 title-5: Malibu
 place-5: 26600 Ocean View Drive
 link-4: /barryknoll-drive-3941
-photo-4: /barryknoll-california-3941/barryknoll1.jpg
+photo-4_image: /barryknoll-california-3941/barryknoll1.jpg
 title-4: Los Angeles
 place-4: 3941 Barryknoll
 link-6: /barryknoll-drive-3933
-photo-6: /barryknoll-california-3933/barryknoll.jpg
+photo-6_image: /barryknoll-california-3933/barryknoll.jpg
 title-6: Los Angeles
 place-6: 3933 Barryknoll
 ---
