--- a/investment-center/index.html
+++ b/investment-center/index.html
@@ -5,7 +5,7 @@ meta-site-description: Property investment opportunities in Los Angeles, CA and 
 twitter-title: Property Investment with Vista Enterprise, Inc | Full-service construction and development firm
 featured-image_path: /images/invest.jpg
 meta-social-description: Property investment opportunities in Los Angeles, CA and the amazing island of Roatan in Honduras
-url:
+url: https://vistaenterpriseinc.us/investment-center
 meta-twitter-description: Property investment opportunities in Los Angeles, CA and the amazing island of Roatan in Honduras
 heading: Recent Completed Projects
 heading: Invest in property
