--- a/malibu.html
+++ b/malibu.html
@@ -4,12 +4,12 @@ title: 2210 Ridge Drive | Construction by Vista Enterprise, Inc
 meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 twitter-title: 2210 Ridge Drive  | Construction by Vista Enterprise, Inc
 featured-image_path: /vista-ridge-malibu/ridge0.jpg
-url:
+url: https://vistaenterpriseinc.us/malibu
 meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
 project-name: 2210 Ridge Drive
 location: Malibu, CA
 left-photo-link: /vista-ridge-malibu/ridge1.jpg
-left-photo: /vista-ridge-malibu/ridge1.jpg
+left_photo: /vista-ridge-malibu/ridge1.jpg
 middle-photo-link: /vista-ridge-malibu/ridge2.jpg
 middle-photo: /vista-ridge-malibu/ridge2.jpg
 right-photo-link: /vista-ridge-malibu/ridge3.jpg
