--- a/malibu.html
+++ b/malibu.html
@@ -9,7 +9,7 @@ meta-social-description: Beautiful homes in Los Angeles, with stunning exterior 
 project-name: 2210 Ridge Drive
 location: Malibu, CA
 left-photo-link: /vista-ridge-malibu/ridge1.jpg
-left_photo: /vista-ridge-malibu/ridge1.jpg
+left-photo_image: /vista-ridge-malibu/ridge1.jpg
 middle-photo-link: /vista-ridge-malibu/ridge2.jpg
 middle-photo: /vista-ridge-malibu/ridge2.jpg
 right-photo-link: /vista-ridge-malibu/ridge3.jpg
